order/order-development.yml
# gunakan API versi 1
apiVersion: apps/v1

# tentukan jenis object = deployment
kind: Deployment

# metadata  
metadata:
  # nama = backend
  name: order
  # berikan labels
  labels:
    app: e-commerce
    tier: services

# tentukan spesifikasi
spec:
  # buat replica 1
  replicas: 1
  # select matchlabels ke e-commerce
  selector:
    matchLabels:
      app: e-commerce
      tier: services
  template:
    # tambahkan metada
    metadata:
      # tambahkan label
      labels:
        app: e-commerce
        tier: services
    spec:
      # bagian container
      containers:
        # nama kontainer
        - name: order
          # ambil image dari ghcrku
          image: ghcr.io/rafrmdhn/order-service:latest
          # deklarasikan port yang akan digunakan
          ports:
            - containerPort: 3000
          # tambahkan env yang akan digunakan
